增加分类页面segment控制

--- a/AIFruit/MainClass/Category(分类)/Views/FruitInfoTableViewCell.xib
+++ b/AIFruit/MainClass/Category(分类)/Views/FruitInfoTableViewCell.xib
@@ -14,28 +14,38 @@
                 <rect key="frame" x="0.0" y="0.0" width="410" height="114.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DRy-gW-k8K">
+                        <rect key="frame" x="20" y="17" width="92" height="82"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2q9-e2-SIQ">
-                        <rect key="frame" x="116" y="16" width="268" height="28"/>
+                        <rect key="frame" x="134" y="16" width="268" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFf-Xr-mAg">
-                        <rect key="frame" x="116" y="85" width="68" height="21"/>
+                        <rect key="frame" x="134" y="52" width="68" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="1" green="0.030145655374867797" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDN-mv-smP">
-                        <rect key="frame" x="200" y="85" width="132" height="21"/>
+                        <rect key="frame" x="218" y="52" width="132" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="已售：300" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOZ-gf-UiX">
+                        <rect key="frame" x="134" y="81" width="98" height="25.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.37580192478291613" green="0.73212594696969702" blue="0.29603870482885264" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
                 <outlet property="FruitNameLabel" destination="2q9-e2-SIQ" id="Qb1-mR-99U"/>
+                <outlet property="FrultImgView" destination="DRy-gW-k8K" id="6GR-c3-tm7"/>
                 <outlet property="OriginPriceLabel" destination="cFf-Xr-mAg" id="Fds-A1-xJc"/>
                 <outlet property="standardLabel" destination="PDN-mv-smP" id="IvN-76-GyP"/>
             </connections>
