--- a/AIFruit/MainClass/Category(分类)/Views/FruitList.storyboard
+++ b/AIFruit/MainClass/Category(分类)/Views/FruitList.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Woo-lv-AHG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SgX-d8-QPN">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -32,7 +32,26 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w8a-hK-lQF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="220" y="218"/>
+            <point key="canvasLocation" x="293" y="335"/>
+        </scene>
+        <!--Fruit List View Controller-->
+        <scene sceneID="o0y-02-718">
+            <objects>
+                <viewController id="SgX-d8-QPN" customClass="FruitListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="S2R-sb-oNj"/>
+                        <viewControllerLayoutGuide type="bottom" id="Bn9-IE-gjS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eNT-gT-wgW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cQn-Fg-1ps" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="160" y="233"/>
         </scene>
     </scenes>
 </document>
